--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcsh 'Young women -- Social life and customs -- Juvenile fiction'
 - !lcsh 'Camp Fire Girls -- Juvenile fiction'
 - !lcsh 'Grand Canyon (Ariz.) -- Description and travel -- Juvenile fiction'
+- GITenberg
 title: The Camp Fire Girls at the End of the Trail
 url: http://www.gutenberg.org/ebooks/42206
